--- a/WebsiteDental/Views/Shared/Components/Doctors/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/Doctors/Default.cshtml
@@ -36,7 +36,14 @@
                             <h5 class="mb-0">@doctor.FullName</h5>
                             <p class="mb-1 small" style="color: white !important;">@doctor.Phone</p>
 
-                            <a href="#appointment" class="btn btn-primary btn-sm rounded-pill py-1 px-3">Đặt lịch khám</a>
+                            <a asp-controller="DetailDoctors" asp-action="Detail" asp-route-id="@doctor.Id"
+                               class="btn btn-primary btn-sm rounded-pill py-1 px-3">
+                                Xem chi tiết
+                            </a>
+
+
+                       
+
                         </div>
                     </div>
                 </div>
@@ -61,7 +68,11 @@
                         <div class="team-title p-3">
                             <h5 class="mb-0">@doctor.FullName</h5>
                             <p class="mb-1 small" style="color: white !important;" >@doctor.Phone</p>
-                            <a href="#appointment" class="btn btn-primary btn-sm rounded-pill py-1 px-3">Đặt lịch khám</a>
+                            <a asp-controller="DetailDoctors" asp-action="Detail" asp-route-id="@doctor.Id"
+                               class="btn btn-primary btn-sm rounded-pill py-1 px-3">
+                                Xem chi tiết
+                            </a>
+
                         </div>
                     </div>
                 </div>
