--- a/WebsiteDental/wwwroot/assets/css/DetailDoctors.css
+++ b/WebsiteDental/wwwroot/assets/css/DetailDoctors.css
@@ -281,3 +281,41 @@ body {
     margin-top: 8px;
     font-size: 14px;
 }
+/* css phần đặt lịch bác sĩ ạ */
+.form-container {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+}
+
+.form-label {
+    font-weight: bold;
+}
+
+.required-label::after {
+    content: ' *';
+    color: red;
+}
+
+.doctor-card {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+    .doctor-card img {
+        max-width: 250px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
+
+    .doctor-card .doctor-name {
+        font-weight: bold;
+        color: #007bff;
+    }
+
+    .doctor-card .doctor-title {
+        color: #6c757d;
+    }
