--- a/WebsiteDental/Views/Shared/Components/Discounts/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/Discounts/Default.cshtml
@@ -31,7 +31,8 @@
                     <span class="medcheck-original-price">@n.FinalPrice</span>
                 </div>
                 <div class="medcheck-expiry-date">Từ @n.StartDate đến: @n.EndDate</div>
-                <div class="medcheck-hotline">Hotline đặt hẹn</div>
+                    <a href="/ContactForms" class="medcheck-hotline">Hotline đặt hẹn</a>
+
                 <div class="medcheck-phone-number">0835731781</div>
                 <div class="medcheck-type">Gói khám chuyên sâu</div>
             </div>
