--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LifeSure - Life Insurance Website Template</title>
+    <title>Website-Dental</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -29,12 +29,13 @@
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Template Stylesheet -->
-    <link href="~/assets/css/style.css" rel="stylesheet">
-    <link href="~/assets/css/style_menu.css" rel="stylesheet">
-    <link href="~/assets/css/style_Image.css" rel="stylesheet">
-    <link href="~/assets/css/style_Service.css" rel="stylesheet">
-    <link href="~/assets/css/style_Discounts.css" rel="stylesheet">
-    <link href="~/assets/css/style_doctors.css" rel="stylesheet">
+    <link href="~/assets/css/style/style.css" rel="stylesheet">
+    <link href="~/assets/css/style/style_menu.css" rel="stylesheet">
+    <link href="~/assets/css/style/style_Image.css" rel="stylesheet">
+    <link href="~/assets/css/style/style_Service.css" rel="stylesheet">
+    <link href="~/assets/css/style/style_Discounts.css" rel="stylesheet">
+    <link href="~/assets/css/style/style_doctors.css" rel="stylesheet">
+    <link href="~/assets/css/style/Banner.css" rel="stylesheet">
 
 </head>
 
