--- a/WebsiteDental/wwwroot/assets/css/style/style_menu.css
+++ b/WebsiteDental/wwwroot/assets/css/style/style_menu.css
@@ -159,4 +159,4 @@
     }
 }
 
-/*//////////////////////////////////////*/
+/*//////////////CSS PHẦN BANNER CỦA WEBSITE-DENTAL////////////////////////*/
